boot/tests/errors/ty_errors/ty_errors.c
%s Type mismatch: '%s' <> '%s'. Occurred while unifying '%s' to '%s'.
